REMS-Salesforce/force-app/main/default/objects/Follow_Up_Task__c/Follow_Up_Task__c.object-meta.xml
<CustomObject>
    <description>Tracks post-enrollment activities assigned to internal users for patient follow-up</description>
    <label>Follow Up Task</label>
    <nameField>
        <label>Follow Up Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Follow Up Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>