REMS-Salesforce/force-app/main/default/objects/Follow_Up_Task__c/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <label>Follow Up Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Check</fullName>
            </value>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Document Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>