REMS-Salesforce/force-app/main/default/objects/Follow_Up_Task__c/fields/Notes_Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>Notes_Additional_Description__c</fullName>
    <label>Notes/Additional Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>