REMS-Salesforce/force-app/main/default/objects/Follow_Up_Task__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Follow Up Tasks</relationshipLabel>
    <relationshipName>Follow_Up_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>